# Simple-Cpp-Setup

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  README.md  devcontainer.json
src/: main.cpp
